@@ -36,7 +36,7 @@ utime $mtime, $mtime, $pmc;
 all_from('lib/Pugs/Compiler/Rule.pm');
 requires('Parse::Yapp' => '0');
 requires('PadWalker' => '1.0');
-requires('Class::InsideOut' => '0');
+# requires('Class::InsideOut' => '0');
 requires('Data::Dump::Streamer' => '0');
 requires('Cache::Cache' => '1.05');
 
